# gautostart

./: .gitignore  .readthedocs.yaml  README.md  meson.build  meson_options.txt
demo/sqgi-autostart/: README.md  main.nut  sqgipkg.json
docs/: api.rst  conf.py  development.rst  getting-started.rst  index.rst  platform-behavior.rst  sqgi-demo.rst  usage.rst
gautostart/: gautostart-manager.h  gautostart-visibility.h  gautostart.h
src/: gautostart-linux-private.h  gautostart-linux.c  gautostart-manager-private.h  gautostart-manager.c  gautostart-platform.h  gautostart-portal.c  gautostart-unsupported.c  gautostart-windows.c  gautostart-xdg.c
tests/: manager.c  xdg.c
